--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-testing-library": "^3.10.2",
@@ -34,6 +33,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/user-event": "^13.5.0",
     "prettier": "2.5.0"
   }
 }
