--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.1.3",
     "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-testing-library": "^3.10.2",
+    "msw": "^0.35.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
